--- a/style.css
+++ b/style.css
@@ -1,9 +1,57 @@
 body {
     font-family: "Roboto", sans-serif;
+    margin: 0;
+    padding: o;
     display: flex;
     flex-direction: column;
 }
 
 .hero {
     background-color: #1f2937;
+}
+
+.header {
+    display: flex;
+    padding: 0px 200px;
+}
+
+.header p {
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.header ul {
+    font-size: 18px;
+    color: #E5E7EB;
+    display: flex;
+    list-style-type: none;
+    gap: 20px;
+}
+
+.headerLinks {
+    display: flex;
+    margin-left: auto;
+}
+
+.heroContent {
+    display: flex;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+
+.heroInfo {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    margin: 14px;
+}
+
+.heroInfo p {
+    font-size: 18px;
+    color: #E5E7EB;
 }
