--- a/style.css
+++ b/style.css
@@ -16,7 +16,10 @@ h1 {
 /* This is the styling for the hero section */
 .hero {
     background-color: #1f2937;
-    min-height: 500px;
+    /*
+    min-height: 600px;
+    */
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -54,6 +57,7 @@ h1 {
     justify-content: center;
     align-items: center;
     padding: 0px 200px;
+    height: 450px;
 }
 
 /* Styles for the hero content */
